# partswatchai

./: .env.example  .gitignore  .replit  Procfile  config.py  db_setup.py  main.py  pipeline_runner.py  pyproject.toml  render.yaml  replit.md  run_fixed_stages.py  run_historical_extract.py
assistant/: __init__.py  claude_api.py  context_builder.py
attached_assets/: Pasted-Add-XYZ-classification-to-transform-classify-py-XYZ-mea_1776403513643.txt  Pasted-Add-a-chat-interface-to-dashboard-index-html-Embed-the-_1774675840249.txt  Pasted-Add-a-webhook-receiver-endpoint-to-the-existing-Elite-E_1776190501120.txt  Pasted-Build-a-new-analysis-called-Chronic-Understocking-Repor_1776627199091.txt  Pasted-Build-ml-basket-py-Co-purchase-basket-analysis-using-ml_1775854125485.txt  Pasted-Build-ml-churn-py-customer-churn-predictor-This-is-the-_1776621109295.txt  Pasted-Build-ml-forecast-prophet-py-This-is-the-highest-priori_1775944103098.txt  Pasted-Critical-finding-96-of-A-class-SKUs-have-no-forecast-ro_1776543436809.txt  Pasted-Do-all-three-a-b-and-c-b-first-update-replit-md-immedia_1776625006918.txt  Pasted-Excellent-work-All-six-pipeline-stages-confirmed-live-N_1774369632876.txt  Pasted-Full-dashboard-redesign-and-optimization-needed-Current_1776547545164.txt  Pasted-Go-with-Option-B-lower-thresholds-plus-network-level-ro_1776545251970.txt  Pasted-I-am-building-a-custom-AI-powered-inventory-and-purchas_1774357972754.txt  Pasted-Major-discovery-Product-cube-has-critical-data-we-haven_1775848066047.txt  Pasted-New-business-requirement-from-ownership-critical-for-fo_1774385981168.txt  Pasted-New-highest-priority-task-build-our-primary-data-source_1775793535345.txt  Pasted-The-incremental-pull-confirmed-working-7-849-rows-10-10_1775795745521.txt  Pasted-Update-replit-md-with-the-full-updated-roadmap-PHASE-1-_1774387262452.txt
config/: autocube_column_map.json  partswatch_column_map.json
dashboard/: churn.html  index.html  server.py
db/: connection.py
(+87 files in other folders)
