[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [{name = "Tony D"}]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "flask>=3.1.3",
    "gunicorn>=21.2.0",
    "lightgbm>=4.6.0",
    "mlxtend>=0.24.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "requests-ntlm>=1.3.0",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "supabase>=2.28.3",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Explicit package list — setuptools auto-discovery refuses when more than
# one top-level package is present, so we enumerate the real Python
# packages here.  `config/`, `dashboard/`, and `sample_data/` are
# intentionally omitted: they are data/asset directories, not importable
# packages (no __init__.py).  The repo's `config.py` module is picked
# up via `py-modules`.
[tool.setuptools]
packages = [
    "assistant",
    "db",
    "engine",
    "extract",
    "ml",
    "models",
    "transform",
    "utils",
]
py-modules = ["config", "main"]
